// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative internalcomm.proto

syntax = "proto3";
option go_package = "github.com/chuamingkai/50.041DynamoProject/pkg/grpc";

service Replication {
    rpc PutReplica (PutRepRequest) returns (PutRepResponse);
    rpc GetReplica (GetRepRequest) returns (GetRepResponse);
}

message PutRepRequest {
    bytes key = 1;
    bytes data = 2;
}

message PutRepResponse {
    bool isDone = 1;
}

message GetRepRequest {
    bytes key = 1;
}

message GetRepResponse {
    bytes data = 1;
}